--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div class="title-hero">
             <p>Countdown Bulan Suci Ramadhan</p>
             <h4 id="time"></h4>
-            <p id="typewriter">ini nanti cerita nya kata kata motivasi gan</p>
+            <p id="typewriter" ></p>
         </div>
 
     </div>
     <div class="container">
         <div class="jadwal">
          <div id="adzan">
-             <h3>adzan shubuh akan datang pada 13:00 lagi (ini masih prototype)</h3>
+             <h3>masih prototype</h3>
          </div>
          <div class="tgl-adzan">
          </div>
